edit jenkins file